--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "prettier-plugin-tailwindcss": "^0.6.5",
     "tailwindcss": "^3.4.6",
     "tailwindcss-animate": "^1.0.7",
+    "unplugin-auto-import": "^0.18.2",
+    "unplugin-vue-components": "^0.27.3",
     "vite": "^5.3.1"
   }
 }
