--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "element-plus": "^2.7.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
+    "vue-intersect-directive": "^1.1.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
