--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "element-plus": "^2.7.8",
     "pinia": "^2.1.7",
     "vue": "^3.4.29",
-    "vue-intersect-directive": "^1.1.1",
     "vue-router": "^4.3.3"
   },
   "devDependencies": {
